--- a/front-dogs/src/app/components/create-pc/create-pc.component.html
+++ b/front-dogs/src/app/components/create-pc/create-pc.component.html
@@ -1,3 +1,16 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="http://localhost:4200/start">Dogs in the Vineyard</a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  
+      
+
+  <button class="btn btn-danger float-right" type="button" [routerLink]="['/list-pc']" [routerLinkActive]= "['actived']">
+     Back
+    </button>
+    <button class="btn btn-danger float-right" type="button" [routerLink]="['/']" [routerLinkActive]= "['actived']">
+      Log Out
+     </button>
+</nav>
 
 
 <div  class="container">
