--- a/front-dogs/src/app/components/master-screen/master-screen.component.html
+++ b/front-dogs/src/app/components/master-screen/master-screen.component.html
@@ -40,23 +40,23 @@
               <tr>
                 <th scope="row">Acuity</th>
                 <td>{{characterSelected.acuity}}d6</td>
-                <td><button class="btn btn-danger">Add</button></td>
+                <td><button class="btn btn-danger" (click)="addDiceStat('Acuity', characterSelected.acuity)">Add</button></td>
                
               </tr>
               <tr>
                 <th scope="row">Body</th>
                 <td>{{characterSelected.body}}d6</td>
-                <td><button class="btn btn-danger">Add</button></td>
+                <td><button class="btn btn-danger" (click)="addDiceStat('Body', characterSelected.body)">Add</button></td>
               </tr>
               <tr>
                 <th scope="row">Heart</th>
                 <td>{{characterSelected.heart}}d6</td>
-                <td><button class="btn btn-danger">Add</button></td>
+                <td><button class="btn btn-danger" (click)="addDiceStat('Heart', characterSelected.heart)">Add</button></td>
               </tr>
               <tr>
                 <th scope="row">Will</th>
                 <td>{{characterSelected.will}}d6</td>
-                <td><button class="btn btn-danger">Add</button></td>
+                <td><button class="btn btn-danger" (click)="addDiceStat('Will', characterSelected.will)">Add</button></td>
               </tr>
             </tbody>
           </table>
@@ -76,7 +76,7 @@
               <tr *ngFor="let yes of traits">
                 <th scope="row" *ngIf="yes.name != ''">{{yes.name}}</th>
                 <td *ngIf="yes.name != ''">{{yes.number}}{{yes.dice}}</td>
-                <td *ngIf="yes.name != ''"><button class="btn btn-danger">Add</button></td>
+                <td *ngIf="yes.name != ''"><button class="btn btn-danger" (click)="addDice(yes.name, yes.number, yes.dice)">Add</button></td>
               
               </tr>
               
@@ -97,11 +97,13 @@
               <tr *ngFor="let people of relationships">
                 <th scope="row" *ngIf="people.name != ''">{{people.name}}</th>
                 <td *ngIf="people.name != ''">{{people.number}}{{people.dice}}</td>
-                <td *ngIf="people.name != ''"><button class="btn btn-danger">Add</button></td>
+                <td *ngIf="people.name != ''"><button class="btn btn-danger" (click)="addDice(people.name, people.number, people.dice)">Add</button></td>
               
               </tr>
               
             </tbody>
           </table>
+          <app-play-screen [nombre]="characterSelected"></app-play-screen>
+          
     </div>
 
