--- a/front-dogs/src/assets/styles.css
+++ b/front-dogs/src/assets/styles.css
@@ -34,5 +34,19 @@ body{
     margin: 4px;
     
 }
+#screen{
+    block-size: responsive;
+    width: 80%;
+    height: 30%;
+    border: 2px 2px 2px solid black;
+    box-shadow: 2px 2px 2px  black;
+    background: rgb(160, 158, 158);
+    padding: 10px;
+}
+#dice{
+    margin: 3px;
+    align-items: center;
+    padding: 3px;
+}
 
 
